# data-centralization-platform_DEMO

./: .env  .eslintrc.js  .flake8  .gitignore  .prettierignore  .prettierrc.js  ADVANCED_TECHNOLOGY_INTEGRATION_BRAINSTORMING_GUIDE.md  ARCHITECTURE.md  Makefile  README.md  REORGANIZATION_SUMMARY.md  WARP.md  competitive-business-review.md  demo-extracted-folder-structure.md  demo_data.json  demo_report.md  demo_scenarios.json  package.json  pyproject.toml  pytest.ini  requirements.txt  scenario_summary.json  tsconfig.json  validate_setup.py
data/database/init/: 01-create-schemas.sql  init-db.sh
development/: README.md
development/demos/: correlation_analysis_demo.py
development/demos/interactive/: streamlit_dashboard.py
development/testing/functional/: test_musicbrainz_basic.py  test_spotify_basic.py
development/testing/integration/: test_pokemon_fields.py  test_pokemon_graphql.py  test_pokemon_schema.py  test_pokemon_simple.py
development/testing/oauth/: test_oauth_flow.py
development/testing/unit/: test_setup.py
development/tools/generators/: generate_structure.bat
infrastructure/docker/: docker-compose.yml
infrastructure/environment/: .env.development
infrastructure/environments/: .env.example  README.md
infrastructure/environments/development/config/: .env.development
infrastructure/environments/development/secrets/: .env.secrets.development
infrastructure/environments/powershell/: load_environment.ps1
infrastructure/environments/production/config/: .env.production
infrastructure/environments/production/secrets/: .env.secrets.production
infrastructure/environments/shared/config/: .env.shared
infrastructure/environments/shared/secrets/: .env.secrets.shared
infrastructure/environments/staging/secrets/: .env.secrets.staging
infrastructure/terraform/: variables.tf
outputs/: DEMO_MATERIALS_INDEX.md
outputs/competitive_materials/: competitive_battlecards.json  competitive_landscape.json  complete_competitive_analysis.json  market_opportunity.json  positioning_strategy.json  pricing_strategy.json
outputs/presentation_materials/: comprehensive_demo_materials.json  demo_scripts.json  executive_summary.json  technical_architecture.json  use_case_scenarios.json
outputs/video_materials/: complete_video_guide.json  distribution_strategy.json  editing_guide.json  executive_script.json  industry_showcase_script.json  production_guide.json  technical_script.json
resources/archive/: repository_structure_guide.md
resources/data-enterprise/: Enterprise_Data_Intelligence_Platform_Brainstorm.md  repository-structure-guide.md  subscription-license-planning.md  ui-brainstorming.md
resources/docs/: README.md  data_sources_and_insights.md  demo-extracted-folder-structure.md  folder-structure-details.md  folder_structure_guide.md  implementation_plan.md  llm-knowledgebase.md
resources/docs/ai/: llm-coding-practices-guide.md  llm-technical-development-guide.md
resources/docs/business/: competitive-business-review.md  market-research-notes.md  mvp-stakeholder-showcase-implementation-guide.md
resources/docs/development/feature-planning/: README.md  feature-proposal-template.md
resources/docs/development/feature-planning/examples/: EX_user-authentication-feature.md  user-authentication-feature.md
resources/docs/development/implementation/: README.md  implementation-plan.md  implementation-template.md
resources/docs/development/implementation/examples/: EX_api-endpoint-implementation.md
resources/docs/development/testing/: testing-strategy.md
resources/docs/processes/: README.md  ai-development-workflow.md  code-commenting-guide.md  git-usage-guide.md  repository-structure-guide.md
resources/docs/technical/: README.md  centralized-logging-architecture.md  environment-implementation-architecture.md  mvp-testing-plan.md  shared-package-architecture.md
resources/docs/testing/: llm_chat_application_testing_guide.md
resources/docs/ui/: ui-design-inspiration.md
resources/docs/user-guides/: README.md  getting-started.md
resources/documentation/: color-palette-design-system.md  data-ingestion-pipeline-brainstorming.md  figma-react-development-roadmap.md  figma-ui-design-prompt.md  intelligent-document-management-brainstorming.md  processing-pipeline-connector-strategy.md  proof-of-concept-implementation-guide.md
resources/guides/: demo-git-commit-guide.md
resources/technical/: demo-extracted-folder-structure.md
scripts/: create_competitive_analysis.py  create_demo_scenarios.py  create_demo_video_guide.py  create_presentation_materials.py  generate_demo_data.py  generate_folder_structure.ps1  test_visualizations.py
server/: main.py  requirements.txt
services/auth/musicbrainz_auth_service/: main.py  requirements.txt  test_oauth_flow.py
services/data_collection/musicbrainz_collector/: .env.example  main.py  requirements.txt
services/data_collection/openweathermap_collector/: README.md  main.py  requirements.txt
services/data_collection/pokemon_collector/: main.py
services/data_collection/spotify_collector/: .env.example  README.md  main.py  requirements.txt
services/data_collection/tmdb_collector/: main.py
services/llm_integration/llm_backend/: .env.example  README.md  package-lock.json  package.json  server.js  start-backend.bat  test-backend.ps1
ui/demo/: README.md
ui/demo/llm-frontend/src/components/: Chat.js
ui/figma-extract/: App.tsx  Attributions.md
ui/llm-frontend/: README_LLM.md  package-lock.json  package.json  start-frontend.bat
ui/llm-frontend/src/: App.css
ui/llm-frontend/src/components/: Chat.css
